[gd_scene load_steps=7 format=3 uid="uid://2rg75ayhhko6"]

[ext_resource type="Script" uid="uid://ba524dnwhf8f0" path="res://node.gd" id="1_112p8"]
[ext_resource type="Texture2D" uid="uid://b5f4cxtubs4gr" path="res://assets/Background4.png" id="1_sy5k4"]
[ext_resource type="PackedScene" uid="uid://blxb7pbgwuqvv" path="res://pipes.tscn" id="2_bss38"]
[ext_resource type="PackedScene" uid="uid://db6lrth50jpgu" path="res://character_body_2d.tscn" id="3_e2u21"]
[ext_resource type="PackedScene" uid="uid://cr8n85qtn7yhx" path="res://floor.tscn" id="4_e2u21"]
[ext_resource type="PackedScene" uid="uid://cahwfb6onnnq0" path="res://game_over.tscn" id="6_tda05"]

[node name="Node" type="Node"]
script = ExtResource("1_112p8")
pipe_scene = ExtResource("2_bss38")

[node name="bg" type="Sprite2D" parent="."]
position = Vector2(442, 509)
scale = Vector2(4, 4)
texture = ExtResource("1_sy5k4")

[node name="player" parent="." instance=ExtResource("3_e2u21")]

[node name="floor" parent="." instance=ExtResource("4_e2u21")]

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[node name="ScoreLabel" type="Label" parent="."]
z_index = 3
anchors_preset = -1
anchor_left = 0.472
anchor_top = 0.119
anchor_right = 0.538
anchor_bottom = 0.251
offset_left = 8.19199
offset_top = -13.384
offset_right = -8.83203
offset_bottom = -113.936
grow_horizontal = 2
theme_override_font_sizes/font_size = 100
text = "0"
horizontal_alignment = 1

[node name="GameOver" parent="." instance=ExtResource("6_tda05")]

[node name="pipes" parent="." instance=ExtResource("2_bss38")]
z_index = 1

[connection signal="hit" from="floor" to="." method="_on_floor_hit"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="restart" from="GameOver" to="." method="_on_game_over_restart"]
